# mnq-trader

./: .env.example  .gitignore  Makefile  README.md  SETUP.md  analyze.py  backtest.py  config.py  main.py  models.py  pyproject.toml  requirements.txt
ai/: prompts.py  trader.py
analytics/: metrics.py  trade_log.py
data/: bar_builder.py  gex_rh.py  indicators.py  market_context.py  pipeline.py
data/feeds/: __init__.py  base.py  mock.py  yahoo.py
dom/: dom_analyzer.py  dom_book.py
engine/: bar_clock.py  directional_engine.py  dual_engine.py  recon.py  scheduler.py
execution/: brackets.py  broker.py  profit_manager.py
gates/: chain.py
risk/: manager.py
state/: paper_journal.py  store.py
